# correction-capteurs

./: README.md  pyproject.toml
ex1_offset/: README.md  exercice.py  fake_temperature.py  main.py  offset_corrector.py  pyproject.toml  test_exercice.py  test_offset_corrector.py
ex2_moyenne_mobile/: README.md  exercice.py  fake_ultrasound_with_noise.py  moving_average.py  pyproject.toml  test_exercice.py  test_moving_average.py
ex3_filtrage/: README.md  exercice.py  fake_ultrasound.py  outlier_filter.py  pyproject.toml  test_exercice.py  test_outlier_filter.py
ex4_calibration/: README.md  fake_potentiometer.py  main.py  potentiometer_calibrator.py  pyproject.toml  test_exercice.py  test_potentiometer_calibrator.py
ex5_bonus_nonlinearite/: README.md  exercice.py  fake_ultrasound.py  fake_ultrasound_nonlinear.py  piecewise_linear_corrector.py  pyproject.toml  test_exercice.py  test_piecewise_linear_corrector.py
